Fix: New translations django.po from Crowdin

--- a/InvenTree/locale/ru/LC_MESSAGES/django.po
+++ b/InvenTree/locale/ru/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-11 22:02+0000\n"
-"PO-Revision-Date: 2021-06-13 13:49\n"
+"PO-Revision-Date: 2021-06-13 14:47\n"
 "Last-Translator: \n"
 "Language-Team: Russian\n"
 "Language: ru_RU\n"
@@ -567,26 +567,26 @@ msgstr "Подтвердите завершение с неполным выде
 
 #: build/forms.py:227
 msgid "Confirm build completion"
-msgstr ""
+msgstr "Подтвердите завершение сборки"
 
 #: build/forms.py:252
 msgid "Confirm cancel"
-msgstr ""
+msgstr "Подтвердите отмену"
 
 #: build/forms.py:252 build/views.py:66
 msgid "Confirm build cancellation"
-msgstr ""
+msgstr "Подтвердите отмену сборки"
 
 #: build/forms.py:266
 msgid "Select quantity of stock to allocate"
-msgstr ""
+msgstr "Выберите количество запасов для распределения"
 
 #: build/models.py:66 build/templates/build/build_base.html:9
 #: build/templates/build/build_base.html:73
 #: part/templates/part/allocation.html:23
 #: report/templates/report/inventree_build_order_base.html:106
 msgid "Build Order"
-msgstr ""
+msgstr "Порядок сборки"
 
 #: build/models.py:67 build/templates/build/index.html:8
 #: build/templates/build/index.html:15 order/templates/order/so_builds.html:12
@@ -596,11 +596,11 @@ msgstr ""
 #: templates/InvenTree/search.html:185
 #: templates/InvenTree/settings/tabs.html:34 users/models.py:43
 msgid "Build Orders"
-msgstr ""
+msgstr "Порядок сборки"
 
 #: build/models.py:127
 msgid "Build Order Reference"
-msgstr ""
+msgstr "Ссылка на заказ"
 
 #: build/models.py:128 order/models.py:101 order/models.py:618
 #: order/templates/order/purchase_order_detail.html:170
